add ssl support print errors to stderror update README

--- a/script_config.example.yaml
+++ b/script_config.example.yaml
@@ -3,6 +3,9 @@
 # URL of Home Assistant
 ha_url: "localhost:8123"
 
+# Specify if Home Assistant uses SSL or not
+ha_use_ssl: false
+
 # Long-Lived access token from Home Assistant
 ha_access_token: "xxxxxx"
 
